# trypurescript

./: .gitignore  .travis.yml  CHANGELOG.md  DEPENDENCIES  LICENSE  Main.hs  Procfile  README.md  RELEASE.md  bower.json  frame.html  index.html  package.json  prelude.purs  prep-release.sh  stack.yaml  trypurescript.cabal
.github/: PULL_REQUEST_TEMPLATE.md
assets/: ace.js  examples.js  gaq.js  scripts.js  style.css
ci/: before_deploy.sh  build.sh
client/: .gitignore  .travis.yml  CNAME  DEPENDENCIES  LICENSE  README.md  bower.json  dependencies.sh  entry.js  index.html  package.json  packages.dhall  setBase.mjs  spago.dhall  spago.yaml  tailwind.config.js  updateSharedConfigVersions.mjs  webpack.common.js  webpack.dev.js
conf/: core.conf  flare.conf  halogen.conf  pux.conf  thermite.conf
core/: Control.Alt.json  Control.Alternative.json  Control.Applicative.json  Control.Apply.json  Control.Biapplicative.json  Control.Biapply.json  Control.Bind.json  Control.Category.json  Control.Comonad.Cofree.json  Control.Comonad.Env.Class.json  Control.Comonad.Env.Trans.json  Control.Comonad.Env.json  Control.Comonad.Store.Class.json  Control.Comonad.Store.Trans.json  Control.Comonad.Store.json  Control.Comonad.Traced.Class.json  Control.Comonad.Traced.Trans.json  Control.Comonad.Traced.json  Control.Comonad.Trans.json  Control.Comonad.json  Control.Extend.json  Control.Lazy.json  Control.Monad.Cont.Class.json  Control.Monad.Cont.Trans.json  Control.Monad.Cont.json  Control.Monad.Eff.Class.json  Control.Monad.Eff.Console.json  Control.Monad.Eff.Exception.Unsafe.json  Control.Monad.Eff.Exception.json  Control.Monad.Eff.Random.json  Control.Monad.Eff.Ref.Unsafe.json  Control.Monad.Eff.Ref.json  Control.Monad.Eff.Unsafe.json  Control.Monad.Eff.json  Control.Monad.Error.Class.json  Control.Monad.Except.Trans.json  Control.Monad.Except.json  Control.Monad.Free.json  Control.Monad.List.Trans.json  Control.Monad.Maybe.Trans.json  (+148 more)
css/: flare.css  index.css  slides.css  style.css
deploy/: nginx.conf  remote.sh  run.sh  start  trypurescript.service
examples/: Home.purs  adt.purs  arrays.purs  default.purs  do.purs  ffi.purs  modules.purs  mutable.purs  operators.purs  rankn.purs  recursion.purs  rows.purs  tco.purs  typeclasses.purs
externs/: Control.Alternative.json  Control.Biapplicative.json  Control.Comonad.Env.Class.json  Control.Comonad.Env.Trans.json  Control.Comonad.Env.json  Control.Comonad.Store.Class.json  Control.Comonad.Store.Trans.json  Control.Comonad.Store.json  Control.Comonad.Traced.Class.json  Control.Comonad.Traced.Trans.json  Control.Comonad.Traced.json  Control.Comonad.Trans.json  Control.Monad.Aff.AVar.json  Control.Monad.Aff.Class.json  Control.Monad.Aff.Console.json  Control.Monad.Aff.Par.json  Control.Monad.Aff.Unsafe.json  Control.Monad.Aff.json  Control.Monad.Cont.Trans.json  Control.Monad.Eff.Console.Unsafe.json  Control.Monad.Eff.Exception.json  Control.Monad.Eff.Ref.Unsafe.json  Control.Monad.Eff.Ref.json  Control.Monad.Eff.json  Control.Monad.Error.Class.json  Control.Monad.Except.Trans.json  Control.Monad.Except.json  Control.Monad.Free.json  Control.Monad.List.Trans.json  Control.Monad.Maybe.Trans.json  Control.Monad.RWS.Class.json  Control.Monad.RWS.Trans.json  Control.Monad.RWS.json  Control.Monad.Reader.Trans.json  Control.Monad.Reader.json  Control.Monad.Rec.Class.json  Control.Monad.ST.json  Control.Monad.State.Class.json  Control.Monad.State.Trans.json  Control.Monad.State.json  (+104 more)
flare/: Color.Blending.json  Color.Scale.Perceptual.json  Color.Scale.json  Color.Scheme.HTML.json  Color.Scheme.Harmonic.json  Color.Scheme.MaterialDesign.json  Color.Scheme.X11.json  Color.json  Control.Alt.json  Control.Alternative.json  Control.Applicative.json  Control.Apply.json  Control.Biapplicative.json  Control.Biapply.json  Control.Bind.json  Control.Category.json  Control.Comonad.Cofree.json  Control.Comonad.Env.Class.json  (+253 more)
(+1069 files in other folders)
