name: trypurescript
version: 1.0.0
cabal-version: >=1.8
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: (c) Phil Freeman 2013
maintainer: paf31@cantab.net
synopsis: Interactive PureScript in the Browser
description: A simple web app for trying out the PureScript compiler
category: Web
author: Phil Freeman
data-dir: ""

executable trypurescript
    build-depends: base ==4.*,
                   aeson -any,
                   bytestring >=0.10.12.0 && <0.11,
                   data-default -any,
                   directory -any,
                   filepath -any,
                   Glob -any,
                   scotty ==0.12,
                   purescript,
                   purescript-cst,
                   containers -any,
                   http-types >= 0.8.5,
                   transformers >=0.5.6.2 && <0.6,
                   mtl >=2.2.2 && <2.3,
                   text -any,
                   time -any,
                   warp ==3.3.14
    hs-source-dirs: server
    main-is: Main.hs
    buildable: True
    other-modules: Main
    ghc-options: -Werror -O2 -threaded -rtsopts
