cabal-version: 2.4
name: trypurescript
version: 1.0.0
build-type: Simple
license: BSD-3-Clause
license-file: LICENSE
copyright: (c) Phil Freeman 2013
maintainer: paf31@cantab.net
synopsis: Interactive PureScript in the Browser
description: A simple web app for trying out the PureScript compiler
category: Web
author: Phil Freeman

executable trypurescript
    -- Since no one depends on this project as a library,
    -- packages below are unbounded because their versions are
    -- determined by the `stack.yaml` file. Versions correspond to the
    -- ones specified in the resolver (i.e. the package set)
    -- unless it is a versioned library added via `extra-deps` field.
    build-depends: base,
                   aeson,
                   bytestring,
                   containers,
                   data-default,
                   Glob,
                   mtl,
                   purescript,
                   scotty,
                   text,
                   time,
                   transformers,
                   warp
    hs-source-dirs: server
    main-is: Main.hs
    default-language: Haskell2010
    ghc-options: -Wall -Werror -O2 -threaded -rtsopts
